--- a/src/main/frontend/package.json
+++ b/src/main/frontend/package.json
@@ -13,9 +13,10 @@
     "yarn": ">=1.22.22"
   },
   "dependencies": {
+    "next": "14.2.2",
+    "prop-types": "^15.8.1",
     "react": "^18",
-    "react-dom": "^18",
-    "next": "14.2.2"
+    "react-dom": "^18"
   },
   "devDependencies": {
     "postcss": "^8",
