--- a/src/main/frontend/package.json
+++ b/src/main/frontend/package.json
@@ -13,6 +13,10 @@
     "yarn": ">=1.22.22"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
+    "@mui/icons-material": "^5.15.15",
+    "@mui/material": "^5.15.15",
     "next": "14.2.2",
     "prop-types": "^15.8.1",
     "react": "^18",
