--- a/src/main/frontend/package.json
+++ b/src/main/frontend/package.json
@@ -17,6 +17,7 @@
     "@emotion/styled": "^11.11.5",
     "@mui/icons-material": "^5.15.15",
     "@mui/material": "^5.15.15",
+    "axios": "^1.6.8",
     "next": "14.2.2",
     "prop-types": "^15.8.1",
     "react": "^18",
