--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -4,20 +4,28 @@ server:
 spring:
   datasource:
     driver-class-name: org.h2.Driver
-    url: jdbc:h2:mem:board;MODE=MYSQL
-    username: sa
-    password: sa
+    url: jdbc:h2:mem:board;MODE=MYSQL;
+    username: username
+    password: password
 
   jpa:
     hibernate:
-      ddl-auto: create
+      ddl-auto: create-drop
     show-sql: true
     properties:
       hibernate:
-      format_sql: true
-      use_sql_comments: true
+        format_sql: true
+        use_sql_comments: true
+        dialect: org.hibernate.dialect.H2Dialect
+    database-platform: org.hibernate.dialect.H2Dialect
 
   h2:
     console:
       enabled: true
       path: /h2-console
+
+  sql:
+    init:
+      data-locations: classpath:schema.sql
+      mode: always
+      platform: h2
